src/components/Header.css
.header {
  min-height: 0px;
  background-color: #FFF;
  background-position: center;
  border-bottom: 1px solid #000;
  width: 100%;
}

.header-greeting {
  background-color: #212121;
  color: #CCC;
  font-family: 'Roboto Condensed', Rockwell, serif;
  text-align: left;
  padding: 0.5rem 1rem;
  font-size: 15px;
  line-height: 1;
  box-shadow: 1px 0 15px -4px black, -1px 0 8px -4px black;
}

.header-logo {
  display: flex;
  justify-content: center;
  background-color: white;
  padding: 1rem;
  box-shadow: 1px 0 15px -4px black, -1px 0 8px -4px black;
}

.header-banner-link {
  text-decoration: none;
}

.header-banner-img {
  display: block;
  width: 100%;
  height: auto;
}

.header-tabs {
  background-color: #ab3939;
  margin-left: auto;
  margin-right: auto;
  width: 1168px;
  border-bottom: 1px solid #000;
  height: 34px;
  line-height: 1.2;
  box-shadow: 1px 0 15px -4px black, -1px 0 8px -4px black;
  padding-left: 10px;
  text-decoration: none;
  transition-duration: 0.4s;
  z-index: 9999;
  font-family: "Roboto Condensed", Rockwell, serif;
  font-size: 16px;
  text-shadow: 1px 1px 2px #222;
  overflow: hidden;
}

.nav-button {
  float: left;
  width: 80px;
  text-align: center;
  border-radius: 0;
  border: #ab3939;
  border-left: 1px solid #873838;
  border-right: 0 solid #873838;
  background-color: #ab3939;
  color: #FFF;
  text-shadow: #000 1px 0 1px;
  padding: 8px;
  text-decoration: none;
  font-family: "Roboto Condensed", Rockwell, serif;
  font-size: 16px;
  cursor: pointer;
  transition: background-color 0.3s;
  letter-spacing: normal;
  text-rendering: auto;
}

.nav-button:hover {
  background-color: #000;
  opacity: 40%;
  z-index: 9999;
}

.tab-active {
  font-weight: bold;
}

@media (max-width: 768px) {
  .header-tabs {
    flex-wrap: wrap;
  }
}

